# zed

./: Cargo.toml  Features.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
crates/collab/src/: rpc.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/editor/src/: editor.rs  editor_settings.rs  hover_popover.rs
crates/exec_command/: Cargo.toml
crates/exec_command/src/: exec_command.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs  open_buffer_finder.rs
crates/fs/src/: fake_git_repo.rs
crates/git/src/: git.rs  repository.rs  stash.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: branch_picker.rs  git_branch_status.rs  git_panel.rs  git_remote_status.rs  git_ui.rs  pull_popup.rs  push_popup.rs  rebase_popup.rs  reset_popup.rs  solo_diff_view.rs  stash_popup.rs  transient.rs
crates/gpui/src/: platform.rs  window.rs
crates/gpui_macos/src/: window.rs
crates/minibuffer/: Cargo.toml
crates/minibuffer/src/: minibuffer.rs
crates/open_path_prompt/: Cargo.toml
crates/open_path_prompt/src/: directory_finder.rs  open_path_prompt.rs
crates/picker/src/: picker.rs
crates/project/src/: git_store.rs
crates/project_panel/src/: project_panel_settings.rs
crates/proto/proto/: git.proto  zed.proto
crates/proto/src/: proto.rs
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: projectile.rs  recent_projects.rs
crates/references_picker/: Cargo.toml
crates/references_picker/src/: references_picker.rs
crates/scratch_buffer/: Cargo.toml
crates/scratch_buffer/src/: scratch_buffer.rs
crates/search/: Cargo.toml
crates/search/src/: text_finder.rs
crates/search/src/text_finder/: delegate.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: editor.rs  title_bar.rs  workspace.rs
crates/title_bar/src/: title_bar.rs
crates/vim/: Cargo.toml
crates/vim/src/: command_line.rs  hover.rs  normal.rs  vim.rs
crates/workspace/src/: pane.rs  status_bar.rs  workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
