[package]
name = "exec_command"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/exec_command.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
fuzzy.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
minibuffer.workspace = true
picker.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
