[package]
name = "minibuffer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/minibuffer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
command_palette_hooks.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
menu.workspace = true
project.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
