[package]
name = "scratch_buffer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/scratch_buffer.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
paths.workspace = true
project.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
